style.css
/* CENTER HAMBURGER */
.hamburger {
    display: none;
    font-size: 32px;
    cursor: pointer;
    text-align: end;
    /*margin-left:300px;*/
    background-color: rgb(60, 58, 58);
   
}

/* DESKTOP */
@media (min-width: 769px) {
    .hamburger {
        display: none;
    }
}

/* MOBILE */
@media (max-width: 768px) {

    /* hide navbar by default */
    .navbar {
        display: none;
       
    }

    /* show hamburger */
    .hamburger {
        display: block;
        position: absolute;
        top: 30px; /* adjust if needed */
        left: 10%;
        transform: translateX(-50%);
        color:white;
        margin-top: -15px;
         
    }

    /* mobile menu */
    .navbar.show {
        display: block;
        background-color:rgba(243, 241, 241, 0.777);
        position: absolute;
        top: 70px;
        left: 50%;
        transform: translateX(-100%);
       
        border-radius: 15px;
        
     
  
      
        /*border: 3px solid rgba(93, 87, 87, 0.303);*/
       backdrop-filter: blur(7px) ;
        transition:2s;
       z-index: 9999;
    
     
       
    }
   





    .navbar ul li {
        display: block;
        margin: 12px 0;
         
    }

    .navbar  ul li a:hover{/* background-color: rgba(137, 43, 226, 0.155);*/
                            
   }


}











.navbar ul{list-style-type: none;
           /*justify-self: center;*/
           justify-content: center;
            justify-content:space-between;
           
           display: flex;
           
           font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
           font-size: 24px;
          text-wrap: wrap;
           border-radius: 4px;
           flex-wrap: wrap;
         
          
          
}

.navbar li{margin: 0px;
        

}


.navbar a{text-decoration: none;
          color:rgba(0, 0, 0, 0.725);
         
   
         
          transition: 2s;
          
         
}
.navbar a:hover{color: rgba(227, 42, 21, 0.652);
               text-shadow: 2px 1px 2px;
           
                
}
/*underline effect*/
.navbar a{
    position: relative;
    text-decoration: none;
   
}

.navbar a::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -3px;
    width: 100%;
    height: 3px;
   
    background: linear-gradient(red,pink,green);
    box-shadow: 1px 1px 3px;


    transform: scaleX(0);
    transform-origin:center;
   
    transition: 0.3s ease;
   
}

.navbar a:hover::after {
    transform: scaleX(1);

}
/*end of underline effect*/



body{ 
     background-color: rgba(0, 0, 0, 0.563);
     transition: 2s;
}
.bodyDefaultBackground{
                      background-color: azure;
                      
}


ul img{width: 90px;
       height: 80px;
       border: 1px solid black;
       border-radius: 200px;
         
}
.portfolioHeroImage img{/*width: 500px;*/
                        display: block;
                        margin:auto;
                        border-radius: 20px;
                        width: 95%;

}
.portfolioHeroImage pre{position:absolute;
                      color:white;
                      margin:100px;
                      font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
}

/*Langiage i cod in section code*/
/*third image collage */
.imagecollage3 {display:flex;
                  margin:auto;
                  flex-wrap: wrap;
                  gap:50px;
                  justify-content: center;
                  /*background-color: rgba(224, 199, 199, 0.853);*/
                  background-color: rgba(222, 184, 135, 0.193);

                 border-radius: 7px;
                 padding-top: 50px;
                 padding-bottom: 50px;
                
                  
}
.imagecollage3 img{width:300px;
                  height:200px;
                 
               
                 
}

.image3 h1{font-size:24px;
         


}
.image3 {display: block;
        /*border:1px solid rgba(182, 173, 190, 0.651);*/
         border:1px solid rgba(16, 16, 16, 0.651);
         box-shadow: 1px 1px 1px;
        border-radius:7px ;
        padding: 20px;
        max-width: 300px;
       /* background-color: rgba(223, 160, 131, 0.567);*/
       background-color: rgba(255, 228, 196, 0.338);
        transition: 1s ;
       
    
}

.image3 img{display: block;
           margin:auto;
           border: 1px solid rgb(194, 173, 173) ;
           border-radius: 5px;
           transition: 0.5s ease-in;
           width:70%;
           height:auto;
           

}
.image3 p{font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
        /*padding:10px;*/
        color: white;
        line-height: 25px;
         
}

.image3:hover {/*transform: translateY(-10px);*/
               transform:translateY(-10px);
              cursor:pointer;
              transition: 1s ease-in;
              
              

}


/*second image collage */
.imagecollage2 {display:flex;
                  margin:auto;
                  flex-wrap: wrap;
                  gap:50px;
                  justify-content: center;
                 /* background-color:rgba(165, 42, 42, 0.788);*/
                 background-color:rgba(128, 145, 128, 0.481);
                   border-radius: 7px;
                 padding-top: 100px;
                 padding-bottom: 100px;
                
                  
}
.imagecollage2 img{width:300px;
                  height:200px;
                 
               
                 
}

.image2 h1{font-size:24px;
       


}
.image2 {display: block;
        border:1px solid rgba(232, 229, 235, 0.651);
        border-radius:7px ;
        padding: 20px;
        max-width: 300px;
        background-color: rgba(108, 100, 134, 0.37);
        transition: 1s ;
        box-shadow: 2px 2px 3px;
    
}
/* ... */

